# Test_Task_Khalikov

./: CMakeLists.txt  circles.cpp  circles.h  ellipses.cpp  ellipses.h  helixes.cpp  helixes.h  main.cpp  threedcurve.cpp  threedcurve.h
